2013-02-23  Patrice Dumas  <pertusus@free.fr>

	* tp/t/input_files/sample_utf8.texi: avoid having two nodes differing
	only in case, for case-sensitve filesystems.
	Report in http://savannah.gnu.org/bugs/?38380.
	* tp/Makefile.am, tp/maintain/*: modularize and rename scripts
	associated to standalone modules handling.

2013-02-22  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (@t{@@set @@value}): mention that @set
	need not appear at the beginning of a line.
	(@t{@@enumerate}, @t{@@itemize}): clarify that normal text cannot
	appear before the first @item (any more).
	
	* README-hacking: include CPAN update in release procedure.

2013-02-22  Antonio Diaz Diaz  <ant_diaz@teleline.es>  (tiny change)

	* info/filesys.c (compress_suffixes): Add .lz/lzip.
	* install-info/install-info.c (open_possibly_compressed_file):
	Add lzip support.
	* doc/info-stnd.texi,
	* doc/texinfo.txi: mention it.
	bug-texinfo, 22 Feb 2013 19:08:02.

2013-02-22  Eli Zaretskii  <eliz@gnu.org>

	* install-info/ginstall-info.exe.manifest: new file.
	* install-info/Makefile.am (dist_bin_SCRIPTS) [HOST_IS_WINDOWS]:
	add it.  bug-texinfo, 19 Feb 2013 19:39:51.

	* info/pcterm.c (pc_initialize_terminal): Move prototype outside
	of w32_info_init to the file level.
	bug-texinfo, 19 Feb 2013 19:40:48.

2013-02-22  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Parser.pm: better handling of comments in @-commands
	with line specially handled (@set, @ifset, @unmacro...).
	Accept @set and @clear almost everywhere.
	Accept that @set and @clear are not at the beginning of a line.
	Do not warn for @end in style command, as it may be the @end of
	a conditional that is correct in that context.
	Improve error messages of @-commands with braces closed because
	of seeing a command before the closing brace.

2013-02-21  Karl Berry  <karl@gnu.org>

	* NEWS: mention incompatibilities of text outside @item
	and irregular sectioning trees.

2013-02-20  Patrice Dumas  <pertusus@free.fr>
